[package]
name = "quic-reverse-control"
description = "Control protocol implementation for quic-reverse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
