[package]
name = "quic-reverse"
description = "Reverse-initiated, multiplexed services over QUIC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["quinn"]
quinn = ["quic-reverse-transport/quinn"]

[dependencies]
quic-reverse-control = { workspace = true }
quic-reverse-transport = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
quic-reverse-transport = { workspace = true, features = ["mock"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "relay"
path = "examples/relay.rs"

[[example]]
name = "edge"
path = "examples/edge.rs"

[lints]
workspace = true
